enhance: 优化生物暴露处理流程